--- a/Experiment/Base.lproj/Main.storyboard
+++ b/Experiment/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OdM-h1-Gff">
-                                <rect key="frame" x="55" y="401" width="210" height="30"/>
+                                <rect key="frame" x="55" y="354" width="210" height="30"/>
                                 <color key="backgroundColor" red="1" green="0.69080444408632657" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -39,28 +39,21 @@
                                 </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="username" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="J1Z-Iq-QL2">
-                                <rect key="frame" x="55" y="310" width="210" height="30"/>
+                                <rect key="frame" x="55" y="263" width="210" height="30"/>
                                 <color key="backgroundColor" red="0.95795756578445435" green="0.96429413557052612" blue="0.96435588598251343" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <textInputTraits key="textInputTraits" textContentType="username"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="hE9-uL-tif">
-                                <rect key="frame" x="55" y="348" width="210" height="30"/>
+                                <rect key="frame" x="55" y="301" width="210" height="30"/>
                                 <color key="backgroundColor" red="0.95795756578445435" green="0.96429413557052612" blue="0.96435588598251343" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                             </textField>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_lowres.png" translatesAutoresizingMaskIntoConstraints="NO" id="C1M-kT-2QK">
-                                <rect key="frame" x="55" y="86" width="210" height="210"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="210" id="WQ2-Wh-y0r"/>
-                                    <constraint firstAttribute="width" constant="210" id="jof-yU-XKj"/>
-                                </constraints>
-                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sRD-Qz-rYM">
-                                <rect key="frame" x="55" y="439" width="210" height="30"/>
+                                <rect key="frame" x="55" y="392" width="210" height="30"/>
                                 <color key="backgroundColor" red="0.9666559100151062" green="0.68803709745407104" blue="0.19485792517662048" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="tintColor" red="0.37571549415588379" green="0.69099611043930054" blue="0.95566636323928833" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -71,23 +64,33 @@
                                     <action selector="signupOrLogin:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vDk-UY-qiy"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_black.png" translatesAutoresizingMaskIntoConstraints="NO" id="3Nm-9Z-fuP">
+                                <rect key="frame" x="16" y="125" width="288" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="288" id="VJx-6k-SGM"/>
+                                    <constraint firstAttribute="height" constant="128" id="XVJ-xU-hce"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.95280677080154419" green="0.57203382253646851" blue="0.19131067395210266" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="3Nm-9Z-fuP" secondAttribute="trailing" constant="16" id="12k-xx-dDM"/>
                             <constraint firstItem="OdM-h1-Gff" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="55" id="3M6-fd-3q3"/>
                             <constraint firstItem="J1Z-Iq-QL2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="55" id="7FK-Kh-qgl"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="3Nm-9Z-fuP" secondAttribute="trailing" constant="16" id="7bW-PJ-ZV8"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="sRD-Qz-rYM" secondAttribute="trailing" constant="55" id="8tb-Z2-n7x"/>
-                            <constraint firstItem="J1Z-Iq-QL2" firstAttribute="top" secondItem="C1M-kT-2QK" secondAttribute="bottom" constant="14" id="EZN-OA-Qu3"/>
+                            <constraint firstItem="3Nm-9Z-fuP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="D6I-HV-nIM"/>
                             <constraint firstItem="sRD-Qz-rYM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="55" id="HZG-ub-uu2"/>
                             <constraint firstItem="sRD-Qz-rYM" firstAttribute="top" secondItem="OdM-h1-Gff" secondAttribute="bottom" constant="8" id="IXQ-cb-hFd"/>
+                            <constraint firstItem="3Nm-9Z-fuP" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="105" id="JEA-VY-1ZO"/>
                             <constraint firstItem="hE9-uL-tif" firstAttribute="top" secondItem="J1Z-Iq-QL2" secondAttribute="bottom" constant="8" id="Kl9-RF-xbW"/>
+                            <constraint firstItem="J1Z-Iq-QL2" firstAttribute="top" secondItem="3Nm-9Z-fuP" secondAttribute="bottom" constant="10" id="NWo-hp-Jne"/>
                             <constraint firstItem="hE9-uL-tif" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="55" id="QGj-fA-7Y3"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="J1Z-Iq-QL2" secondAttribute="trailing" constant="55" id="dTq-Fk-A3V"/>
-                            <constraint firstItem="C1M-kT-2QK" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="66" id="ibo-v1-Usl"/>
-                            <constraint firstItem="C1M-kT-2QK" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ieY-qE-naJ"/>
                             <constraint firstItem="OdM-h1-Gff" firstAttribute="top" secondItem="hE9-uL-tif" secondAttribute="bottom" constant="23" id="lRZ-eM-jun"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="OdM-h1-Gff" secondAttribute="trailing" constant="55" id="oEZ-e6-ILK"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="hE9-uL-tif" secondAttribute="trailing" constant="55" id="qAO-y3-dup"/>
+                            <constraint firstItem="J1Z-Iq-QL2" firstAttribute="top" secondItem="3Nm-9Z-fuP" secondAttribute="bottom" constant="10" id="vmQ-X0-1ZB"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -273,7 +276,7 @@
     <resources>
         <image name="bottle.png" width="50" height="50"/>
         <image name="heart.png" width="50" height="50"/>
-        <image name="logo_lowres.png" width="1050" height="1050"/>
+        <image name="logo_black.png" width="288" height="128"/>
         <image name="pill.png" width="1200" height="1200"/>
         <image name="plus.png" width="50" height="50"/>
     </resources>
