--- a/Experiment/Base.lproj/Main.storyboard
+++ b/Experiment/Base.lproj/Main.storyboard
@@ -147,6 +147,7 @@
                                 <textInputTraits key="textInputTraits" textContentType="name"/>
                                 <connections>
                                     <action selector="medUserInput:" destination="r3v-9g-vND" eventType="editingDidEnd" id="has-ek-hUM"/>
+                                    <action selector="userInputMedicine:" destination="r3v-9g-vND" eventType="editingDidEnd" id="2bK-rZ-2pr"/>
                                     <action selector="userMedInput:" destination="r3v-9g-vND" eventType="editingDidEnd" id="y8x-7z-UI6"/>
                                     <outlet property="delegate" destination="ojo-JZ-pOP" id="AsF-uV-McZ"/>
                                 </connections>
@@ -272,28 +273,50 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EGO-KQ-W9V">
-                                <rect key="frame" x="0.0" y="214" width="320" height="162"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <connections>
-                                    <outlet property="dataSource" destination="Z3K-rX-Ji8" id="aTh-H2-YU9"/>
-                                    <outlet property="delegate" destination="Z3K-rX-Ji8" id="oap-M8-Ue2"/>
-                                </connections>
-                            </pickerView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XLi-iR-GhS">
-                                <rect key="frame" x="139" y="97" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Schedule Reminder" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fkd-88-HzI">
+                                <rect key="frame" x="16" y="99" width="288" height="48"/>
+                                <color key="backgroundColor" red="0.9666474461555481" green="0.68806546926498413" blue="0.19678100943565369" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="288" id="72O-UX-GXn"/>
+                                    <constraint firstAttribute="height" constant="48" id="Ayx-nL-T6i"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                 <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
+                                <color key="highlightedColor" red="0.95795756580000002" green="0.96429413559999999" blue="0.964355886" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="axm-GL-VwX">
+                                <rect key="frame" x="55" y="217" width="70" height="70"/>
+                                <state key="normal" image="phone.png"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OYo-KF-3E7">
+                                <rect key="frame" x="187" y="217" width="70" height="70"/>
+                                <state key="normal" image="sms.png"/>
+                            </button>
+                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="x4v-OP-mi5">
+                                <rect key="frame" x="0.0" y="328" width="320" height="162"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <date key="date" timeIntervalSinceReferenceDate="534009377.14564401">
+                                    <!--2017-12-03 15:56:17 +0000-->
+                                </date>
+                            </datePicker>
                         </subviews>
                         <color key="backgroundColor" red="0.95280677080154419" green="0.57203382253646851" blue="0.19131067395210266" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Fkd-88-HzI" firstAttribute="top" secondItem="jUf-CQ-w1t" secondAttribute="top" constant="79" id="Eos-Jk-gDd"/>
+                            <constraint firstItem="OYo-KF-3E7" firstAttribute="leading" secondItem="axm-GL-VwX" secondAttribute="trailing" constant="62" id="QKk-Ss-Z3y"/>
+                            <constraint firstItem="OYo-KF-3E7" firstAttribute="leading" secondItem="axm-GL-VwX" secondAttribute="trailing" constant="62" id="Te3-ar-wEr"/>
+                            <constraint firstItem="axm-GL-VwX" firstAttribute="leading" secondItem="jUf-CQ-w1t" secondAttribute="leading" constant="55" id="Tvo-s6-Fsm"/>
+                            <constraint firstItem="OYo-KF-3E7" firstAttribute="top" secondItem="Fkd-88-HzI" secondAttribute="bottom" constant="70" id="WWi-m3-Rro"/>
+                            <constraint firstItem="jUf-CQ-w1t" firstAttribute="trailing" secondItem="Fkd-88-HzI" secondAttribute="trailing" constant="16" id="Y1b-iI-GHo"/>
+                            <constraint firstItem="axm-GL-VwX" firstAttribute="top" secondItem="Fkd-88-HzI" secondAttribute="bottom" constant="70" id="dhT-No-309"/>
+                            <constraint firstItem="jUf-CQ-w1t" firstAttribute="trailing" secondItem="OYo-KF-3E7" secondAttribute="trailing" constant="63" id="koF-1b-415"/>
+                            <constraint firstItem="Fkd-88-HzI" firstAttribute="leading" secondItem="jUf-CQ-w1t" secondAttribute="leading" constant="16" id="y1a-6Y-eyX"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="jUf-CQ-w1t"/>
                     </view>
                     <connections>
-                        <outlet property="medLabel" destination="XLi-iR-GhS" id="vBZ-hj-F1o"/>
-                        <outlet property="pickerView" destination="EGO-KQ-W9V" id="3Ny-3J-MXN"/>
+                        <outlet property="datePicker" destination="x4v-OP-mi5" id="fgw-xo-3Tt"/>
+                        <outlet property="medicineReminder" destination="Fkd-88-HzI" id="3oc-8w-KHc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mRP-ZD-Ktn" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -322,7 +345,9 @@
     <resources>
         <image name="heart.png" width="50" height="50"/>
         <image name="logo_black.png" width="288" height="128"/>
+        <image name="phone.png" width="70" height="70"/>
         <image name="pill.png" width="40" height="40"/>
         <image name="plus.png" width="50" height="50"/>
+        <image name="sms.png" width="70" height="70"/>
     </resources>
 </document>
